--- a/Dockerfile.grpc
+++ b/Dockerfile.grpc
@@ -1,15 +1,23 @@
-FROM python:3.7-alpine
+FROM python:3.9-alpine
 
 WORKDIR /app
 
+# copy files
 COPY ./grpc_server.py /app
 COPY ./meterusage_pb2.py /app
 COPY ./meterusage_pb2_grpc.py /app
+COPY ./data /app/data
 
 COPY ./requirements.txt /app/requirements.txt
 
 # Install dependencies
+RUN apk update && apk add --no-cache build-base gcc g++ linux-headers
+RUN pip install --upgrade pip setuptools wheel
+
+RUN pip install grpcio==1.64.1
+RUN pip install grpcio-tools==1.62.1
+
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Run meterusage_server.py when the container launches
-CMD ["python", "server.py"]
+# Run grpc_server.py when the container launches
+CMD ["python", "grpc_server.py"]
