--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-version: '3.8'
 
 services:
   grpc_server:
@@ -11,11 +10,11 @@ services:
     ports:
       - "50051:50051"
 
-  http_server:
+  client:
     build:
       context: .
       dockerfile: Dockerfile.app
-    container_name: http-server
+    container_name: grpc-client
     volumes:
       - .:/app
     ports:
