--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
 fastapi==0.103.0
-grpcio==1.62.0
-grpcio-tools==1.62.1
+setuptools==49.6.0
 httpx==0.24.1
 uvicorn==0.22.0
-protobuf==3.17.1
+protobuf==4.21.6
 pytest==7.0.1
 pytest-asyncio==0.21.1
