--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   grpc_server:
     build:
       context: .
-      dockerfile: Dockerfile.grpc
+      dockerfile: docker/Dockerfile.grpc
     container_name: grpc-server
     volumes:
       - .:/grpc
@@ -13,7 +13,7 @@ services:
   client:
     build:
       context: .
-      dockerfile: Dockerfile.app
+      dockerfile: docker/Dockerfile.app
     container_name: grpc-client
     volumes:
       - .:/app
